--- a/InitializrSpringbootProject/src/main/resources/application.properties
+++ b/InitializrSpringbootProject/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port=80
+server.port=80
 
 #Para definir el formato de despliegue de fecha/hora del log en la consola
 logging.pattern.dateformat=hh:mm
@@ -9,7 +9,7 @@ spring.thymeleaf.cache=false
 #MySql conexion
 spring.datasource.url=jdbc:mysql://localhost:3306/proyecto?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=X2xlastx2x?
+spring.datasource.password=lucy.123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #mostrar informaci\u00f3n en el log
