--- a/InitializrSpringbootProject/src/main/resources/application.properties
+++ b/InitializrSpringbootProject/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.main.banner-mode=off
 #Para que en tiempo de desarrollo se deje de usar el "cache" del servidor .. en producci\u00f3n si...
 spring.thymeleaf.cache=false
 #MySql conexion
-spring.datasource.url=jdbc:mysql://localhost:3306/proyecto?useTimezone=true&serverTimezone=UTCç
+spring.datasource.url=jdbc:mysql://localhost:3306/proyecto?useTimezone=true&serverTimezone=UTC
 
 # password de Brett
 #spring.datasource.username=root
